objects/ASI_JP_TnE_Due_Date_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>ASI_JP_TnE_Closing_Date__c</fullName>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Department_Category_Code__c</fullName>
        <label>Department Category Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Payment_Option__c</fullName>
        <label>Payment Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>DC Card</fullName>
                </value>
                <value>
                    <fullName>DC Card(Mgr.)</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Period_From__c</fullName>
        <label>Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Period_To__c</fullName>
        <label>Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Valid_Period__c</fullName>
        <formula>(TODAY() &lt;  ASI_JP_TnE_Closing_Date__c + 90) &amp;&amp; ( ASI_JP_TnE_Period_From__c &lt; Today())</formula>
        <label>Valid Period?</label>
        <type>Checkbox</type>
    </fields>
    <label>ASI TnE Due Date Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Period_From__c</columns>
        <columns>ASI_JP_TnE_Period_To__c</columns>
        <columns>ASI_JP_TnE_Closing_Date__c</columns>
        <columns>ASI_JP_TnE_Payment_Date__c</columns>
        <columns>ASI_JP_TnE_Department_Category_Code__c</columns>
        <columns>ASI_JP_TnE_Payment_Option__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Mass_Upload_by_Wilken</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Closing_Date__c</columns>
        <columns>ASI_JP_TnE_Department_Category_Code__c</columns>
        <columns>ASI_JP_TnE_Payment_Date__c</columns>
        <columns>ASI_JP_TnE_Payment_Option__c</columns>
        <columns>ASI_JP_TnE_Period_From__c</columns>
        <columns>ASI_JP_TnE_Period_To__c</columns>
        <columns>ASI_JP_TnE_Valid_Period__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Wilken</value>
        </filters>
        <label>Mass Upload by Wilken</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Due Date Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI TnE Due Date Mappings</pluralLabel>
    <recordTypes>
        <fullName>ASI_JP_TnE_Due_Date_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE JP Due Date Mapping</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>